exports[`Candytar renders with color amber 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--amber"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color blue 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--blue"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color brown 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--brown"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color chartreuse 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--chartreuse"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color green 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--green"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color grey 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--grey"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color lilac 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--lilac"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color orange 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--orange"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color pink 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--pink"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color purple 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--purple"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color rose 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--rose"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with color teal 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--teal"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;

exports[`Candytar renders with custom size 1`] = `
<svg
  className="ax-candytar-placeholder ax-candytar-placeholder--rose"
  style={
    Object {
      "height": "4rem",
      "width": "4rem",
    }
  }
  viewBox="0 0 32 32">
  <filter
    id="ax-candytar-placeholder__filter">
    <feColorMatrix
      type="matrix"
      values="
          1 0 0 0    -0.27
          0 1 0 0    -0.27
          0 0 1 0    -0.27
          0 0 0 0.55  0
        " />
  </filter>
  <circle
    className="ax-candytar-placeholder--background"
    cx="16"
    cy="16"
    r="16" />
  <path
    className="ax-candytar-placeholder--body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z" />
</svg>
`;
